Fixed also the spacing how the section how

--- a/_sass/3-modules/_solutions.scss
+++ b/_sass/3-modules/_solutions.scss
@@ -1,11 +1,6 @@
 /* Solutions Section */
 .solutions {
-  padding: 100px 0;
   background: white;
-
-  @media (max-width: 768px) {
-    padding: 80px 0;
-  }
 }
 
 .solutions-grid {
